force-app/main/default/objects/Contact/fields/AEmail__c.field-meta.xml
<CustomField>
    <fullName>AEmail__c</fullName>
    <label>AEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>