force-app/main/default/objects/Contact/fields/Alternative_Email_Adress__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email_Adress__c</fullName>
    <inlineHelpText>This email address should be filled in when a contact has more than 1 email address setting, which needs to be recorded</inlineHelpText>
    <label>Alternative Email Address</label>
    <type>Email</type>
</CustomField>