force-app/main/default/objects/Contact/fields/Alternative_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Mobile__c</fullName>
    <label>Alternative Mobile</label>
    <type>Phone</type>
</CustomField>