force-app/main/default/objects/Contact/fields/ClientContact_Id__c.field-meta.xml
<CustomField>
    <fullName>ClientContact_Id__c</fullName>
    <externalId>true</externalId>
    <label>Client Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>