force-app/main/default/objects/Contact/fields/ClientUser_Id__c.field-meta.xml
<CustomField>
    <fullName>ClientUser_Id__c</fullName>
    <externalId>true</externalId>
    <label>Client User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>