force-app/main/default/objects/Contact/fields/Contact_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Contact Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>