force-app/main/default/objects/Contact/fields/Customer_Experience_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Surveys__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is checked by default to all active clients -- representing the contact&#39;s willingness to receive customer experience surveys.</description>
    <inlineHelpText>Represents if this contact wishes to receive customer experience surveys.</inlineHelpText>
    <label>Customer Experience Surveys</label>
    <type>Checkbox</type>
</CustomField>