force-app/main/default/objects/Contact/fields/Dupe_Index__c.field-meta.xml
<CustomField>
    <fullName>Dupe_Index__c</fullName>
    <label>Dupe Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>