force-app/main/default/objects/Contact/fields/ECN_Formula__c.field-meta.xml
<CustomField>
    <fullName>ECN_Formula__c</fullName>
    <formula>Account.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECN Formula</label>
    <type>Text</type>
</CustomField>