force-app/main/default/objects/Contact/fields/eNett_Product_and_Industry_Information__c.field-meta.xml
<CustomField>
    <fullName>eNett_Product_and_Industry_Information__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is checked by default to all active clients -- representing the contact&#39;s willingness to receive Product and Industry Information from eNett</description>
    <inlineHelpText>Represents if this contact wishes to receive eNett Product and Industry Information.</inlineHelpText>
    <label>eNett Product and Industry Information</label>
    <type>Checkbox</type>
</CustomField>