force-app/main/default/objects/Contact/fields/FEmail__c.field-meta.xml
<CustomField>
    <fullName>FEmail__c</fullName>
    <label>FEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>