force-app/main/default/objects/Contact/fields/Financial_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Financial_Email_Address__c</fullName>
    <label>Financial Email Address</label>
    <type>Email</type>
</CustomField>