force-app/main/default/objects/Contact/fields/IntegratorModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>IntegratorModifiedDate__c</fullName>
    <description>No. Just don&#39;t.</description>
    <label>IntegratorModifiedDate</label>
    <type>DateTime</type>
</CustomField>