force-app/main/default/objects/Contact/fields/IsApi__c.field-meta.xml
<CustomField>
    <fullName>IsApi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>hey you there stop that.</description>
    <label>IsApi</label>
    <type>Checkbox</type>
</CustomField>