force-app/main/default/objects/Contact/fields/IsUser__c.field-meta.xml
<CustomField>
    <fullName>IsUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if the ONLY Contact Type that this record has is &quot;User&quot;</description>
    <label>IsUser</label>
    <type>Checkbox</type>
</CustomField>