force-app/main/default/objects/Contact/fields/Last_Survey_Received__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Received__c</fullName>
    <description>When this contact last received their eNett survey email. This helps us control how often customers get contacted.</description>
    <inlineHelpText>When this contact last received their eNett survey email. This helps us control how often customers get contacted.</inlineHelpText>
    <label>Last Survey Received</label>
    <type>DateTime</type>
</CustomField>