force-app/main/default/objects/Contact/fields/LastModifiedByIntegrator__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByIntegrator__c</fullName>
    <formula>ROUND(MOD((LastModifiedDate - IntegratorModifiedDate__c)*1440,60),1) == 0.0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedByIntegrator</label>
    <type>Checkbox</type>
</CustomField>