force-app/main/default/objects/Contact/fields/Marketing_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Preferences__c</fullName>
    <description>Ability to communicate marketing messages</description>
    <label>Marketing Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agoda opt-out</fullName>
            </value>
            <value>
                <fullName>Marketing opt-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>