force-app/main/default/objects/Contact/fields/Name_and_ECN__c.field-meta.xml
<CustomField>
    <fullName>Name_and_ECN__c</fullName>
    <formula>FirstName &amp;&quot; &quot;&amp; LastName &amp;&quot; &quot;&amp; Account_ECN_Formula__c&amp;&quot; &quot;&amp; TEXT(Account.Customer_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and ECN</label>
    <type>Text</type>
</CustomField>