force-app/main/default/objects/Contact/fields/Name_and_email__c.field-meta.xml
<CustomField>
    <fullName>Name_and_email__c</fullName>
    <formula>Full_Name__c &amp;&quot; &quot;&amp;  LastName &amp;&quot; &quot;&amp;  Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and email</label>
    <type>Text</type>
</CustomField>