force-app/main/default/objects/Contact/fields/PEmail__c.field-meta.xml
<CustomField>
    <fullName>PEmail__c</fullName>
    <label>PEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>