force-app/main/default/objects/Contact/fields/SEmail__c.field-meta.xml
<CustomField>
    <fullName>SEmail__c</fullName>
    <label>SEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>