force-app/main/default/objects/Contact/fields/Since_Last_Survey_Received__c.field-meta.xml
<CustomField>
    <fullName>Since_Last_Survey_Received__c</fullName>
    <formula>IF(ISNULL( Last_Survey_Received__c ), &#39;Not Yet Received Survey&#39;,
    IF(DATEVALUE( NOW() )- DATEVALUE( Last_Survey_Received__c )&gt;14,
        &#39;More Than 2 Weeks Ago&#39;,TEXT(DATEVALUE( NOW() )- DATEVALUE( Last_Survey_Received__c ))
    )
)</formula>
    <label>Days Since Last Survey Received</label>
    <type>Text</type>
</CustomField>