force-app/main/default/objects/Contact/fields/UEmail__c.field-meta.xml
<CustomField>
    <fullName>UEmail__c</fullName>
    <label>UEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>