force-app/main/default/objects/Contact/fields/User_Data_Base__c.field-meta.xml
<CustomField>
    <fullName>User_Data_Base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Data Base</label>
    <type>Checkbox</type>
</CustomField>