force-app/main/default/objects/Contact/fields/User_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Email_Address__c</fullName>
    <label>User Email Address</label>
    <type>Email</type>
</CustomField>