force-app/main/default/objects/Contact/fields/Zendesk_Hist_Contact__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Hist_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zendesk Hist Contact</label>
    <type>Checkbox</type>
</CustomField>