force-app/main/default/objects/Contact/recordTypes/User_Contact_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>User_Contact_Record_Type</fullName>
    <active>true</active>
    <label>User Contact Record Type</label>
</RecordType>