force-app/main/default/objects/Contact/validationRules/Confirm_existence_of_Financial_email.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirm_existence_of_Financial_email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Job_Role__c,&quot;Financial&quot;),ISBLANK( Financial_Email_Address__c ),NOT(Converted_Contact__c))</errorConditionFormula>
    <errorMessage>Financial email address must be populated if the Financial job role has been set.</errorMessage>
</ValidationRule>