force-app/main/default/objects/Contact/validationRules/Confirm_existence_of_related_email_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirm_existence_of_related_email_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Job_Role__c,&quot;Primary&quot;),ISBLANK( Primary_Email_Address__c ),NOT(Converted_Contact__c))</errorConditionFormula>
    <errorMessage>Primary email address must be populated if the Primary job role has been set.</errorMessage>
</ValidationRule>