force-app/main/default/objects/Contact/validationRules/Confirm_existence_of_Secondary_email.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirm_existence_of_Secondary_email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Job_Role__c,&quot;Secondary&quot;),ISBLANK( Secondary_Email_Address__c ),NOT(Converted_Contact__c))</errorConditionFormula>
    <errorMessage>Secondary email address must be populated if the Secondary job role has been set.</errorMessage>
</ValidationRule>