force-app/main/default/objects/Contact/listViews/All_Financial_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Financial_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Financial Contacts</label>
</ListView>